target/debug/build/crossbeam-utils-c9de6437edfd9d86/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/f6e511eec7342f59a25f7c0534f1dbea00d01b14/library/core/src/sync/atomic.rs:3082:1
 ::: /rustc/f6e511eec7342f59a25f7c0534f1dbea00d01b14/library/core/src/sync/atomic.rs:3098:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
